--- a/login.html
+++ b/login.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <main class="login-container">
-    <h1>🎬 Concha - Login</h1>
+    <h1>Login</h1>
     <form id="login-form">
       <label for="email">E-mail:</label>
       <input type="email" id="email" required placeholder="seu@email.com" />
