css do cadastro atualizado jutno com js dele tbm

--- a/login.html
+++ b/login.html
@@ -18,8 +18,11 @@
 
       <button type="submit">Entrar</button>
       <p id="error-message" class="error"></p>
+
     </form>
   </main>
+
+  <button id="botao-voltar" onclick="window.location.href='index.html'">⬅ Voltar para Início</button>
 
   <script src="login.js"></script>
 </body>
