--- a/cadastro.html
+++ b/cadastro.html
@@ -24,5 +24,10 @@
             <p id="error-message" class="error"></p>
         </form>
     </main>
+    
+    <button id="botao-voltar" onclick="window.location.href='index.html'">⬅ Voltar para Início</button>
+
+    <script src="cadastro.js"></script>
+
 </body>
 </html>
