Atualizado de acordo com os requisitos

--- a/index.html
+++ b/index.html
@@ -16,12 +16,15 @@
       <nav class="nav-links">
         <a href="#">Filmes</a>
         <a href="#">Séries</a>
+        <a href="#">Listas</a>
+        <a href="#">Membros</a>
+        <a href="#">Diário</a>
       </nav>
 
       <div class="nav-actions">
         <button class="lang-btn">PT</button>
         <a href="login.html">Entrar</a>
-        <a href="cadastro.html">Junte-se</a>
+        <a href="cadastro.html" class="btn">Cadastre-se</a>
         <a href="#"><img src="images/search-icon.png" alt="Pesquisar" class="icon" /></a>
       </div>
     </div>
