--- a/perfil.html
+++ b/perfil.html
@@ -41,11 +41,10 @@
   </footer>
 
   <script>
-    // Verifica se há usuário logado
     const session = JSON.parse(localStorage.getItem('sessionUser'));
     const nameInput = document.getElementById('name');
     const emailInput = document.getElementById('email');
-
+  
     if (!session) {
       alert('Você precisa estar logado para acessar esta página.');
       window.location.href = 'login.html';
@@ -53,19 +52,28 @@
       nameInput.value = session.name;
       emailInput.value = session.email;
     }
-
-    // Atualiza informações do usuário
+  
     document.getElementById('profile-form').addEventListener('submit', function (e) {
       e.preventDefault();
-
+  
       const updatedUser = {
         name: nameInput.value,
         email: emailInput.value
       };
-
+  
+      // Atualiza a sessão atual
       localStorage.setItem('sessionUser', JSON.stringify(updatedUser));
+  
+      // Atualiza o cadastro na lista de usuários
+      let usuarios = JSON.parse(localStorage.getItem('usuarios')) || [];
+  
+      usuarios = usuarios.map(user =>
+        user.email === session.email ? { ...user, name: updatedUser.name, email: updatedUser.email } : user
+      );
+  
+      localStorage.setItem('usuarios', JSON.stringify(usuarios));
+  
       alert('Informações atualizadas com sucesso!');
     });
   </script>
-</body>
-</html>
+  
