--- a/login.html
+++ b/login.html
@@ -8,18 +8,20 @@
 </head>
 <body>
   <main class="login-container">
-    <h1>🎬 Concha - Login</h1>
+    <h1>Login</h1>
     <form id="login-form">
       <label for="email">E-mail:</label>
-      <input type="email" id="email" required placeholder="seu@email.com" />
-
+      <input type="email" id="email" name="email" required placeholder="seu@email.com" />
+    
       <label for="password">Senha:</label>
-      <input type="password" id="password" required placeholder="********" />
-
+      <input type="password" id="password" name="password" required placeholder="********" />
+    
       <button type="submit">Entrar</button>
       <p id="error-message" class="error"></p>
-    </form>
+    </form>    
   </main>
+
+  <button id="botao-voltar" onclick="window.location.href='index.html'">⬅ Voltar para Início</button>
 
   <script src="login.js"></script>
 </body>
