--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Concha - Filmes</title>
+  <title>Concha</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -14,7 +14,7 @@
       </a>
 
       <nav class="nav-links">
-        <a href="#">Filmes</a>
+        <a href="filmes.html">Filmes</a>
         <a href="#">Séries</a>
         <a href="#">Listas</a>
         <a href="#">Membros</a>
