--- a/index.html
+++ b/index.html
@@ -30,18 +30,62 @@
     </div>
   </header>
 
-  <main>
-    <section class="intro-banner">
-      <h2>Descubra filmes, avalie e compartilhe com seus amigos!</h2>
-      <p>Explore os mais populares agora mesmo.</p>
-    </section>
+ <main>
+  <section class="intro-banner">
+    <h2>Descubra filmes, avalie e compartilhe com seus amigos!</h2>
+    <p>Explore os mais populares agora mesmo.</p>
+  </section>
 
-    <section class="section-title">
-      <h2>Filmes Populares</h2>
-    </section>
+  <section class="section-title">
+    <h2>Filmes Populares</h2>
+  </section>
+  <div id="movies-container" class="grid"></div>
 
-    <div id="movies-container" class="grid"></div>
-  </main>
+<section class="features-section">
+  <h2>O Concha permite que você...</h2>
+  <div class="features-grid">
+    <div class="feature-card">
+      <span class="icon">👁️</span>
+      <p>Mantenha um registro de todos os filmes que você já assistiu (ou comece a partir do dia em que se inscrever)</p>
+    </div>
+    <div class="feature-card">
+      <span class="icon">❤️</span>
+      <p>Demostre seu amor por seus filmes, listas e críticas favoritas com um “curtir”</p>
+    </div>
+    <div class="feature-card">
+      <span class="icon">📝</span>
+      <p>Escreva e compartilhe avaliações e siga amigos e outros membros para ler as deles</p>
+    </div>
+    <div class="feature-card">
+      <span class="icon">⭐</span>
+      <p>Avalie cada filme em uma escala de cinco estrelas (com metades) para registrar e compartilhar sua reação</p>
+    </div>
+    <div class="feature-card">
+      <span class="icon">📅</span>
+      <p>Mantenha um diário de suas exibições de filmes (e atualize para o <strong>Pro</strong> para obter estatísticas abrangentes)</p>
+    </div>
+    <div class="feature-card">
+      <span class="icon">📋</span>
+      <p>Compile e compartilhe listas de filmes sobre qualquer tópico e mantenha uma lista de filmes para assistir</p>
+    </div>
+  </div>
+</section>
+
+  <section class="section-title">
+    <h2>Populares da Semana</h2>
+  </section>
+  <div id="weekly-popular-container" class="grid"></div>
+
+  <section class="section-title">
+    <h2>Melhores Avaliados</h2>
+  </section>
+  <div id="top-rated-container" class="grid"></div>
+
+  <section class="section-title">
+    <h2>Recém Lançados</h2>
+  </section>
+  <div id="recent-releases-container" class="grid"></div>
+</main>
 
   <footer>
     <p>&copy; 2025 Concha. Todos os direitos reservados.</p>
