Atualizações no index, style e script

--- a/index.html
+++ b/index.html
@@ -36,9 +36,6 @@
     <p>Explore os mais populares agora mesmo.</p>
   </section>
 
-  <section class="section-title">
-    <h2>Filmes Populares</h2>
-  </section>
   <div id="movies-container" class="grid"></div>
 
 <section class="features-section">
@@ -71,15 +68,28 @@
   </div>
 </section>
 
-  <section class="section-title">
-    <h2>Populares da Semana</h2>
-  </section>
-  <div id="weekly-popular-container" class="grid"></div>
+<section class="section-title" style="display: flex; justify-content: space-between; align-items: center;">
+  <h2>Acabei de Revisar...</h2>
+  <span class="watched-count">2.631.920.688 filmes assistidos</span>
+</section>
 
-  <section class="section-title">
-    <h2>Melhores Avaliados</h2>
-  </section>
-  <div id="top-rated-container" class="grid"></div>
+<div id="weekly-popular-container" class="scroll-row"></div>
+
+<div class="review-message">
+  <h3>Escreva e compartilhe resenhas. Crie suas próprias listas. Compartilhe sua vida no cinema.</h3>
+  <p>
+    Abaixo estão algumas análises e listas populares desta semana.
+    <a href="#">Cadastre-se</a> para criar a sua.
+  </p>
+</div>
+
+ <section class="section-title" style="display: flex; justify-content: space-between; align-items: center;">
+  <h2>Avaliações Populares Desta Semana</h2>
+  <a href="#" class="see-more">MAIS</a>
+</section>
+
+<div id="top-rated-container" class="popular-reviews"></div>
+
 
   <section class="section-title">
     <h2>Recém Lançados</h2>
