--- a/login.html
+++ b/login.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+ 
   <title>Login - Concha</title>
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -21,9 +22,26 @@
 
     </form>
   </main>
-
+ <button id="toggle-theme">Alternar Tema</button>
   <button id="botao-voltar" onclick="window.location.href='index.html'">⬅ Voltar para Início</button>
+<script>
+  const toggleBtn = document.getElementById('toggle-theme');
+  const body = document.body;
 
-  <script src="login.js"></script>
+  // Aplica o tema salvo no carregamento
+  if (localStorage.getItem('theme') === 'dark') {
+    body.classList.add('dark-theme');
+  }
+
+  toggleBtn.addEventListener('click', () => {
+    body.classList.toggle('dark-theme');
+    
+    if (body.classList.contains('dark-theme')) {
+      localStorage.setItem('theme', 'dark');
+    } else {
+      localStorage.setItem('theme', 'light');
+    }
+  });
+</script>
 </body>
 </html>
