--- a/cadastro.html
+++ b/cadastro.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html long="pt-BR">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -25,6 +25,7 @@
         </form>
     </main>
     
+    <button id="toggle-theme" title="Alternar Tema">🌙</button>
     <button id="botao-voltar" onclick="window.location.href='index.html'">⬅ Voltar para Início</button>
 
     <script src="cadastro.js"></script>
