--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
     <div id="movies-container" class="grid"></div>
   </main>
 
+  <button id="toggle-theme" title="Alternar Tema">🌙</button>
+
   <footer>
     <p>&copy; 2025 Concha. Todos os direitos reservados.</p>
   </footer>
