--- a/login.html
+++ b/login.html
@@ -22,6 +22,7 @@
     </form>
   </main>
 
+  <button id="toggle-theme" title="Alternar Tema">🌙</button>
   <button id="botao-voltar" onclick="window.location.href='index.html'">⬅ Voltar para Início</button>
 
   <script src="login.js"></script>
