dps da cagada de allan

--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
   <footer>
     <p>&copy; 2025 Concha. Todos os direitos reservados.</p>
   </footer>
+<button id="toggle-theme" title="Alternar Tema">🌙</button>
 
   <script src="script.js"></script>
 </body>
