--- a/index.html
+++ b/index.html
@@ -22,11 +22,14 @@
       </nav>
 
       <div class="nav-actions">
-        <button class="lang-btn">PT</button>
-        <a href="login.html">Entrar</a>
-        <a href="cadastro.html" class="btn">Cadastre-se</a>
-        <a href="#"><img src="images/search-icon.png" alt="Pesquisar" class="icon" /></a>
-      </div>
+  <button class="lang-btn">PT</button>
+  <a href="login.html" id="btn-entrar">Entrar</a>
+  <a href="cadastro.html" class="btn" id="btn-cadastrar">Cadastre-se</a>
+  <a href="perfil.html" id="btn-perfil" style="display: none;">Perfil</a>
+  <a href="#" id="btn-sair" style="display: none;">Sair</a>
+  <a href="#"><img src="images/search-icon.png" alt="Pesquisar" class="icon" /></a>
+</div>
+
     </div>
   </header>
 
@@ -89,6 +92,8 @@
 </section>
 
 <div id="top-rated-container" class="popular-reviews"></div>
+
+
 
 
   <section class="section-title">
