alteração com o codigo de dyjon

--- a/index.html
+++ b/index.html
@@ -14,11 +14,9 @@
       </a>
 
       <nav class="nav-links">
-        <a href="#">Filmes</a>
-        <a href="#">Séries</a>
-        <a href="#">Listas</a>
+        <a href="filmes.html">Filmes</a>
         <a href="#">Membros</a>
-        <a href="#">Diário</a>
+        <a href="#">Listas</a>
       </nav>
 
       <div class="nav-actions">
@@ -29,7 +27,6 @@
   <a href="#" id="btn-sair" style="display: none;">Sair</a>
   <a href="#"><img src="images/search-icon.png" alt="Pesquisar" class="icon" /></a>
 </div>
-
     </div>
   </header>
 
@@ -93,19 +90,13 @@
 
 <div id="top-rated-container" class="popular-reviews"></div>
 
-
-
-
-  <section class="section-title">
-    <h2>Recém Lançados</h2>
-  </section>
-  <div id="recent-releases-container" class="grid"></div>
 </main>
 
   <footer>
-    <p>&copy; 2025 Concha. Todos os direitos reservados.</p>
-  </footer>
-<button id="toggle-theme" title="Alternar Tema">🌙</button>
+  <p>&copy; Concha. Feito por estudantes em Recife, Pernambuco. Dados de filmes fornecidos por <a href="https://www.themoviedb.org/" target="_blank" rel="noopener noreferrer">TMDB</a></p>
+</footer>
+
+<button id="toggle-theme" title="Alternar tema">🌙</button>
 
   <script src="script.js"></script>
 </body>
