--- a/cadastro.html
+++ b/cadastro.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
     <title>Cadastro - Concha</title>
     <link rel="stylesheet" href="style.css" />
 </head>
@@ -25,27 +24,44 @@
             <p id="error-message" class="error"></p>
         </form>
     </main>
-    <button id="toggle-theme">Alternar Tema</button>
+    
+    <button id="toggle-theme" title="Alternar Tema">🌙</button>
     <button id="botao-voltar" onclick="window.location.href='index.html'">⬅ Voltar para Início</button>
 
-    <script>
-  const toggleBtn = document.getElementById('toggle-theme');
-  const body = document.body;
+    <script src="cadastro.js"></script>
 
-  // Aplica o tema salvo no carregamento
-  if (localStorage.getItem('theme') === 'dark') {
-    body.classList.add('dark-theme');
-  }
+</body>
+=======
+<!DOCTYPE html>
+<html long="pt-BR">
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Cadastro - Concha</title>
+    <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+    <main class="singup-container">
+        <h1>Cadastro</h1>
+        <form id="singup-form">
 
-  toggleBtn.addEventListener('click', () => {
-    body.classList.toggle('dark-theme');
+            <label for="Nome">Nome:</label>
+            <input type="text" id="Nome" required placeholder="Seu nome completo" />
+
+            <label for="email">E-mail:</label>
+            <input type="email" id="email" required placeholder="seu@email.com" />
+
+            <label for="password">Senha:</label>
+            <input type="password" id="password" required placeholder="********" />
+
+            <button type="submit">Cadastrar</button>
+            <p id="error-message" class="error"></p>
+        </form>
+    </main>
     
-    if (body.classList.contains('dark-theme')) {
-      localStorage.setItem('theme', 'dark');
-    } else {
-      localStorage.setItem('theme', 'light');
-    }
-  });
-</script>
+    <button id="botao-voltar" onclick="window.location.href='index.html'">⬅ Voltar para Início</button>
+
+    <script src="cadastro.js"></script>
+
 </body>
 </html>
