--- a/login.html
+++ b/login.html
@@ -22,7 +22,8 @@
 
     </form>
   </main>
- <button id="toggle-theme">Alternar Tema</button>
+
+  <button id="toggle-theme" title="Alternar Tema">🌙</button>
   <button id="botao-voltar" onclick="window.location.href='index.html'">⬅ Voltar para Início</button>
 <script>
   const toggleBtn = document.getElementById('toggle-theme');
