--- a/perfil.html
+++ b/perfil.html
@@ -7,15 +7,24 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <header>
+   <header class="navbar">
     <div class="container">
-      <h1>🎬 Concha</h1>
-      <nav>
-        <a href="index.html">Início</a>
-        <a href="#">Filmes</a>
-        <a href="#">Séries</a>
-        <a href="perfil.html">Perfil</a>
+      <a href="index.html" class="logo-area">
+        <img src="images/logo-concha.png" alt="Logo Concha" class="logo" />
+      </a>
+
+      <nav class="nav-links">
+        <a href="filmes.html">Filmes</a>
+        <a href="#">Membros</a>
+        <a href="#">Listas</a>
       </nav>
+
+       <div class="nav-actions">
+  <a href="login.html" id="btn-entrar">Entrar</a>
+  <a href="cadastro.html" class="btn" id="btn-cadastrar">Cadastre-se</a>
+  <a href="perfil.html" id="btn-perfil" style="display: none;">Perfil</a>
+  <a href="#" id="btn-sair" style="display: none;">Sair</a>
+</div>
     </div>
   </header>
 
