[feature/ajustes-projeto] - Ajustes finais

--- a/listagemcadastro.html
+++ b/listagemcadastro.html
@@ -8,7 +8,6 @@
 </head>
 <body>
 
-  <!-- Cabeçalho com logo à esquerda e menu centralizado -->
    <header class="navbar">
     <div class="container">
       <a href="index.html" class="logo-area">
@@ -17,11 +16,11 @@
 
       <nav class="nav-links">
         <a href="filmes.html">Filmes</a>
-        <a href="#">Membros</a>
-        <a href="#">Listas</a>
+        <a href="membros.html">Membros</a>
+        <a href="listas.html">Listas</a>
       </nav>
 
-       <div class="nav-actions">
+      <div class="nav-actions">
   <a href="login.html" id="btn-entrar">Entrar</a>
   <a href="cadastro.html" class="btn" id="btn-cadastrar">Cadastre-se</a>
   <a href="perfil.html" id="btn-perfil" style="display: none;">Perfil</a>
