--- a/perfil.html
+++ b/perfil.html
@@ -5,9 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Perfil - Concha</title>
   <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="dark-theme.css" />
 </head>
-<body>
-   <header class="navbar">
+<body class="dark-theme">
+    <header class="navbar">
     <div class="container">
       <a href="index.html" class="logo-area">
         <img src="images/logo-concha.png" alt="Logo Concha" class="logo" />
@@ -15,16 +16,9 @@
 
       <nav class="nav-links">
         <a href="filmes.html">Filmes</a>
-        <a href="#">Membros</a>
-        <a href="#">Listas</a>
+        <a href="membros.html">Membros</a>
+        <a href="listas.html">Listas</a>
       </nav>
-
-       <div class="nav-actions">
-  <a href="login.html" id="btn-entrar">Entrar</a>
-  <a href="cadastro.html" class="btn" id="btn-cadastrar">Cadastre-se</a>
-  <a href="perfil.html" id="btn-perfil" style="display: none;">Perfil</a>
-  <a href="#" id="btn-sair" style="display: none;">Sair</a>
-</div>
     </div>
   </header>
 
@@ -34,20 +28,25 @@
       <p>Veja ou edite suas informações de conta abaixo.</p>
     </section>
 
-    <form id="profile-form">
+    <form id="profile-form" class="form-dark profile-card">
       <label for="name">Nome:</label><br />
       <input type="text" id="name" name="name" required /><br /><br />
 
       <label for="email">Email:</label><br />
       <input type="email" id="email" name="email" required /><br /><br />
 
-      <button type="submit">Salvar</button>
+      <button type="submit" class="btn">Salvar</button>
+      <button type="button" id="logout-btn" class="btn" style="background:#28283a; color:#fff; margin-top:10px;">Sair da Conta</button>
     </form>
   </main>
 
   <footer>
-    <p>&copy; 2025 Concha. Todos os direitos reservados.</p>
-  </footer>
+  <p>&copy; Concha. Feito por estudantes em Recife, Pernambuco. Dados de filmes fornecidos por <a href="https://www.themoviedb.org/" target="_blank" rel="noopener noreferrer">TMDB</a></p>
+</footer>
+
+<button id="toggle-theme" title="Alternar tema">🌙</button>
+
+  <script src="script.js"></script>
 
   <script>
     const session = JSON.parse(localStorage.getItem('sessionUser'));
@@ -84,5 +83,13 @@
   
       alert('Informações atualizadas com sucesso!');
     });
+
+    // Botão de logout
+    document.getElementById('logout-btn').addEventListener('click', function () {
+      localStorage.removeItem('sessionUser');
+      localStorage.removeItem('isLoggedIn');
+      window.location.href = 'index.html';
+    });
   </script>
-  
+</body>
+</html>
