Ajustando o erro na pagina Filmes

--- a/filmes.html
+++ b/filmes.html
@@ -3,12 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Concha - Filmes Populares</title>
-  <link rel="stylesheet" href="filmes.css" />
-  <script src="filmes.js"></script>
+  <title>Filmes - Concha</title>
+  <link rel="stylesheet" href="style.css" />
+<link rel="stylesheet" href="dark-theme.css">
 </head>
 <body>
-   <header class="navbar">
+ 
+<header class="navbar">
     <div class="container">
       <a href="index.html" class="logo-area">
         <img src="images/logo-concha.png" alt="Logo Concha" class="logo" />
@@ -16,11 +17,11 @@
 
       <nav class="nav-links">
         <a href="filmes.html">Filmes</a>
-        <a href="#">Membros</a>
-        <a href="#">Listas</a>
+        <a href="membros.html">Membros</a>
+        <a href="listas.html">Listas</a>
       </nav>
 
-       <div class="nav-actions">
+      <div class="nav-actions">
   <a href="login.html" id="btn-entrar">Entrar</a>
   <a href="cadastro.html" class="btn" id="btn-cadastrar">Cadastre-se</a>
   <a href="perfil.html" id="btn-perfil" style="display: none;">Perfil</a>
@@ -28,53 +29,20 @@
 </div>
     </div>
   </header>
+  <main>
+    <section class="section-title">
+      <h2>Explore Filmes</h2>
+    </section>
 
-  <main class="container">
-    <h2>Filmes Populares Desta Semana</h2>
-    <div class="filmes">
-      <div class="filme">
-        <img src="images/mission.jpg" alt="Mission: Impossible">
-        <div class="info">
-          <strong>Mission: Impossible</strong>
-          <span>👁️ 376 mil | 💬 109 mil</span>
-          <span>❤️ 123 mil</span>
-        </div>
-      </div>
-
-      <div class="filme">
-        <img src="images/sinners.jpg" alt="Sinners">
-        <div class="info">
-          <strong>Sinners</strong>
-          <span>👁️ 1.5 milhões | 💬 226 mil</span>
-          <span>❤️ 672 mil</span>
-        </div>
-      </div>
-
-      <div class="filme">
-        <img src="images/lilo.jpg" alt="Lilo & Stitch">
-        <div class="info">
-          <strong>Lilo & Stitch</strong>
-          <span>👁️ 225 mil | 💬 36 mil</span>
-          <span>❤️ 58 mil</span>
-        </div>
-      </div>
-
-      <div class="filme">
-        <img src="images/final.jpg" alt="Final Destination">
-        <div class="info">
-          <strong>Final Destination</strong>
-          <span>👁️ 459 mil | 💬 82 mil</span>
-          <span>❤️ 148 mil</span>
-        </div>
-      </div>
-    </div>
+    <div id="all-movies-container" class="scroll-row"></div>
   </main>
-<footer>
+
+    <footer>
   <p>&copy; Concha. Feito por estudantes em Recife, Pernambuco. Dados de filmes fornecidos por <a href="https://www.themoviedb.org/" target="_blank" rel="noopener noreferrer">TMDB</a></p>
 </footer>
 
 <button id="toggle-theme" title="Alternar tema">🌙</button>
 
   <script src="filmes.js"></script>
-</body>
-</html>
+
+ 
