--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   <a href="cadastro.html" class="btn" id="btn-cadastrar">Cadastre-se</a>
   <a href="perfil.html" id="btn-perfil" style="display: none;">Perfil</a>
   <a href="#" id="btn-sair" style="display: none;">Sair</a>
+  <button id="btn-admin" style="display:none;">Administração</button>
 </div>
     </div>
   </header>
